--- a/config.json
+++ b/config.json
@@ -10,5 +10,6 @@
     "ACCOUNT_NAME": "account_name",
     "PRESENCE": "presence",
     "RESPONSE": "response",
-    "ERROR": "error" 
+    "ERROR": "error",
+    "SETTIMEOUT": 1 
 }
